tests/err_str_esc01.json.err
Parse error at line 2

001: ["a\"]
002: 
     ^
Unterminated string
